[package]
name = "cloakynode"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
http = "1.3.1"
rustix = { version = "1.0.8", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
