[package]
name = "cloakynode"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
http = "1.4.0"
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
